// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withStyledClassNames All levels could be styled by another styled-component 1`] = `
.c0 {
  background: blue;
}

.c1 {
  background: red;
}

.c2 {
  background: yellow;
}

.c3 {
  background: purple;
}

<div
  className="c0"
  id="root"
>
  Root
  <div
    className="c1"
    id="nestedClassName"
  >
    Nested One Level
    <div
      className={undefined}
      id="anotherNestedClassName"
    >
      Another nested
    </div>
    <div
      className="c2"
      id="first"
    >
      Another first
    </div>
    <div
      className="c3"
      id="second"
    >
      Another second
    </div>
  </div>
</div>
`;

exports[`withStyledClassNames All levels could be styled by another styled-component 2`] = `
.c0 {
  background: red;
}

.c1 {
  background: yellow;
}

.c2 {
  background: purple;
}

<div
  className="c0"
  id="nestedClassName"
>
  Nested One Level
  <div
    className={undefined}
    id="anotherNestedClassName"
  >
    Another nested
  </div>
  <div
    className="c1"
    id="first"
  >
    Another first
  </div>
  <div
    className="c2"
    id="second"
  >
    Another second
  </div>
</div>
`;

exports[`withStyledClassNames All levels could be styled by another styled-component 3`] = `
.c0 {
  background: yellow;
}

<div
  className="c0"
  id="first"
>
  Another first
</div>
`;

exports[`withStyledClassNames All levels could be styled by another styled-component 4`] = `
.c0 {
  background: purple;
}

<div
  className="c0"
  id="second"
>
  Another second
</div>
`;

exports[`withStyledClassNames All levels props dependent styling working 1`] = `
.c0 {
  background: blue;
}

.c1 {
  background: red;
}

.c2 {
  background: yellow;
}

.c3 {
  background: purple;
}

<div
  bool={true}
  className="c0"
  id="root"
>
  Root
  <div
    className="c1"
    id="nestedClassName"
  >
    Nested One Level
    <div
      className={undefined}
      id="anotherNestedClassName"
    >
      Another nested
    </div>
    <div
      className="c2"
      id="first"
    >
      Another first
    </div>
    <div
      className="c3"
      id="second"
    >
      Another second
    </div>
  </div>
</div>
`;

exports[`withStyledClassNames All levels props dependent styling working 2`] = `
.c0 {
  background: red;
}

.c1 {
  background: yellow;
}

.c2 {
  background: purple;
}

<div
  className="c0"
  id="nestedClassName"
>
  Nested One Level
  <div
    className={undefined}
    id="anotherNestedClassName"
  >
    Another nested
  </div>
  <div
    className="c1"
    id="first"
  >
    Another first
  </div>
  <div
    className="c2"
    id="second"
  >
    Another second
  </div>
</div>
`;

exports[`withStyledClassNames All levels props dependent styling working 3`] = `
.c0 {
  background: yellow;
}

<div
  className="c0"
  id="first"
>
  Another first
</div>
`;

exports[`withStyledClassNames All levels props dependent styling working 4`] = `
.c0 {
  background: purple;
}

<div
  className="c0"
  id="second"
>
  Another second
</div>
`;

exports[`withStyledClassNames To provide one level nested props 1`] = `
.c0 {
  background: yellow;
}

<div
  className="c0"
  id="first"
>
  Another first
</div>
`;

exports[`withStyledClassNames To provide one level nested props 2`] = `
.c0 {
  background: purple;
}

<div
  className="c0"
  id="second"
>
  Another second
</div>
`;

exports[`withStyledClassNames To provide one level nested props 3`] = `
.c0 {
  background: blue;
}

.c1 {
  background: yellow;
}

.c2 {
  background: purple;
}

<div
  className="c0"
  id="root"
>
  Root
  <div
    className={undefined}
    id="nestedClassName"
  >
    Nested One Level
    <div
      className={undefined}
      id="anotherNestedClassName"
    >
      Another nested
    </div>
    <div
      className="c1"
      id="first"
    >
      Another first
    </div>
    <div
      className="c2"
      id="second"
    >
      Another second
    </div>
  </div>
</div>
`;
